--- a/theme_example_jaroka/static/src/scss/primary_variables.scss
+++ b/theme_example_jaroka/static/src/scss/primary_variables.scss
@@ -15,7 +15,7 @@ $o-theme-font-urls: (
     'Press+Start+2P',
     'Libre+Barcode+128+Text',
     'Nunito:300,300i,400,400i,700,700i',
-
+$o-theme-font-size-base
 );
 
 $o-theme-font-names: (
